--- a/Day27/BT03.md
+++ b/Day27/BT03.md
@@ -1,22 +1,24 @@
 ## Viết hàm tạo ra id ngẫu nhiên với yêu cầu sau:
 
 ```javascript
-const templateString = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+const listCharacters = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
 
-function generateId(prefix, length) {
-	// Xử lý và in ra kết quả
+function generateId(length, prefix) {
+	// Xử lý và return về kết quả
 }
 ```
 
 **Yêu cầu:**
 
-- Hàm `generateId(prefix, length)` sẽ trả về một chuỗi id ngẫu nhiên với độ dài `length` và tiền tố `prefix`.
-- Chuỗi id ngẫu nhiên được tạo ra từ chuỗi `templateString` bao gồm các ký tự chữ cái và số.
+- Hàm `generateId(length, prefix)` sẽ trả về một chuỗi id ngẫu nhiên với độ dài `length` và tiền tố `prefix`.
+- Chuỗi id ngẫu nhiên được tạo ra từ chuỗi `listCharacters` bao gồm các ký tự chữ cái và số.
+- Nếu người dùng không truyền `prefix` thì mặc định `prefix` là chuỗi rỗng.
 
 **Ví dụ:**
 
 ```javascript
-generateId("user", 8); // Output: "user5a3Fb2DF"
-generateId("product - ", 4); // Output: "product - 3a2f"
-generateId("category - ", 6); // Output: "category - 2Fb3aD"
+generateId(8, "user"); // Output: "user5a3Fb2DF"
+generateId(4, "product - "); // Output: "product - 3a2f"
+generateId(6, "category - "); // Output: "category - 2Fb3aD"
+generateId(10); // Output: "5a3Fb2DFc1"
 ```
